--- a/preamble.tex
+++ b/preamble.tex
@@ -53,6 +53,9 @@
 
 %%%%%%%%%%%%%%%%%%%   operatornames %%%%%%%%%%%%%%%%%%%%%%%%
 % Some shortcuts
+
+
+% Some Shortcuts
 \newcommand{\Nat}{\mathbb{N}}
 \newcommand{\Integ}{\mathbb{Z}}
 \newcommand{\Real}{\mathbb{R}}
@@ -62,43 +65,46 @@
 \newcommand{\field}{\mathbb{F}}
 \newcommand{\im}{\operatorname{Im}}     	
 \newcommand{\Ker}{\operatorname{Ker}}
-\newcommand{\Hom}{\operatorname{Hom}}   	
-\newcommand{\ri}{\operatorname{ri}}
-\newcommand{\Supp}{\operatorname{Supp}} 	
+\newcommand{\Hom}{\operatorname{Hom}}
+\newcommand{\Supp}{\operatorname{Supp}}
 \newcommand{\Ann}{\operatorname{Ann}}
-\newcommand{\HF}{\operatorname{HF}}     	
+\newcommand{\HF}{\operatorname{HF}}
 \newcommand{\HP}{\operatorname{HP}}
-\newcommand{\HS}{\operatorname{HS}}    	
+\newcommand{\HS}{\operatorname{HS}}
 \newcommand{\HN}{\operatorname{HN}}
-\newcommand{\hn}{\operatorname{hn}}     	
+\newcommand{\hn}{\operatorname{hn}}
 \newcommand{\mult}{\operatorname{mult}}
-\newcommand{\LT}{\operatorname{LT}}     	
-\newcommand{\LM}{\operatorname{LM}}	
+\newcommand{\LT}{\operatorname{LT}}
+\newcommand{\LM}{\operatorname{LM}}
 \newcommand{\IG}{\mathcal{I}_G}
-\newcommand{\MS}{\operatorname{MS}}     	
+\newcommand{\MS}{\operatorname{MS}}
 \newcommand{\LC}{\operatorname{LC}}
-\newcommand{\GL}{\operatorname{GL}}     	
+\newcommand{\GL}{\operatorname{GL}}
 \newcommand{\NR}{\operatorname{NR}}
-\newcommand{\id}{\operatorname{id}}		
+\newcommand{\id}{\operatorname{id}}
 \newcommand{\End}{\operatorname{End}}
-\newcommand{\ord}{\operatorname{ord}}	
+\newcommand{\ord}{\operatorname{ord}}
+\newcommand{\Rel}{{\operatorname{Rel}}}
+\newcommand{\Mat}{{\operatorname{Mat}}}
+\newcommand{\trace}{\operatorname{trace}}
+\renewcommand{\det}{\operatorname{det}}
+\newcommand{\characteristic}{\operatorname{char}}
+\newcommand{\Rad}{\operatorname{Rad}}
 \newcommand{\rey}{\varrho}
-\newcommand{\calA}{{\mathcal{A}}}
 \newcommand{\isom}{\cong}
+\newcommand{\calA}{{\mathcal{A}}}
 \newcommand{\calB}{{\mathcal{B}}}
 \newcommand{\calC}{{\mathcal{C}}}
 \newcommand{\calI}{{\mathcal{I}}}
-\newcommand{\Rel}{{\operatorname{Rel}}}
-\newcommand{\Mat}{{\operatorname{Mat}}}
-\newcommand{\tr}{^{\operatorname{tr}}} % transposed matrix
-\newcommand{\trace}{{\operatorname{trace}}}
-\renewcommand{\det}{{\operatorname{det}}}
-\newcommand{\characteristic}{{\operatorname{char}}}
-\newcommand{\lcm}{{\operatorname{lcm}}}
-\newcommand{\rewrite}[1]{{{\xrightarrow{\mathmakebox[0.5cm]{#1}}}_{\rm s}}}
-\newcommand{\nrewrite}[1]{{{\longarrownot\xrightarrow{\mathmakebox[0.5cm]{#1}}}_{\rm s}}}
-\newcommand{\rewriteequiv}[1]{{{\xleftrightarrow{\mathmakebox[0.5cm]{#1}}}_{\rm s}}}
-\newcommand{\reductionstep}[1]{{{\xrightarrow{\mathmakebox[0.5cm]{#1}}}_{\rm ss}}}
+\newcommand{\calZ}{{\mathcal{Z}}}
+\newcommand{\tr}{^\operatorname{tr}}
+\newcommand{\rewrite}[1]{{\stackrel{#1}{\longrightarrow}_s}}
+\newcommand{\rewriteequiv}[1]{{\stackrel{#1}{\longleftrightarrow}_s}}
+\newcommand{\reductionstep}[1]{{\stackrel{#1}{\longrightarrow}_{ss}}}
+\newcommand{\colour}[1]{\color{#1}}
+\newcommand{\bbar}[1]{{\mkern 4.0mu\overline{\mkern-4.0mu #1 \mkern-0.5mu}\mkern 0.5mu}}
+\newcommand{\dotcup}{{\mathop{\dot\cup}}}
+
 
 
 % Inserts an empty page
